objects/HandsMen_Order__c.object
<CustomObject>
    <description>Stores customer orders</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>HandsMen_Customer__c</referenceTo>
        <relationshipLabel>HandsMen Orders</relationshipLabel>
        <relationshipName>HandsMen_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cutomer_Email__c</fullName>
        <label>Cutomer Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending, Confirmed, Rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HandsMen Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>HandsMen OrderNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HandsMen Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Total_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Amount__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Total_Amount__c</errorDisplayField>
        <errorMessage>Please Enter Correct Amount</errorMessage>
    </validationRules>
</CustomObject>